--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://mnsnetwork.xyz/logo.png">
+    
+    <!-- Primary Meta Tags -->
     <title>MNS Minecraft Network - Server Status</title>
+    <meta name="title" content="MNS Minecraft Network - Server Status">
+    <meta name="description" content="{{ proxy_players }}/{{ proxy_max_players }} Players Online - Join our Minecraft network featuring SkyBlock, LifeSteal, SkyWars, and more!">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://mnsnetwork.xyz/">
+    <meta property="og:title" content="MNS Minecraft Network - Server Status">
+    <meta property="og:description" content="{{ proxy_players }}/{{ proxy_max_players }} Players Online - Join our Minecraft network featuring SkyBlock, LifeSteal, SkyWars, and more!">
+    <meta property="og:image" content="https://mnsnetwork.xyz/logo.png">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://mnsnetwork.xyz/">
+    <meta property="twitter:title" content="MNS Minecraft Network - Server Status">
+    <meta property="twitter:description" content="{{ proxy_players }}/{{ proxy_max_players }} Players Online - Join our Minecraft network featuring SkyBlock, LifeSteal, SkyWars, and more!">
+    <meta property="twitter:image" content="https://mnsnetwork.xyz/logo.png">
+    
+    <!-- Styles and Scripts -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
