--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
     
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <style>
@@ -159,9 +160,7 @@
                     <a target="_blank" href="https://discord.mnsnetwork.xyz/" class="text-gray-400 hover:text-white transition-colors">
                         <i class="fab fa-discord fa-lg"></i>
                     </a>
-                    <a href="https://status.mnsnetwork.xyz/" class="text-gray-400 hover:text-white transition-colors">
-                        <i class="fa-solid fa-server"></i>
-                    </a>
+                    <a class="text-gray-400 hover:text-white transition-colors" href="https://forum.mnsnetwork.xyz/"><i class="fas fa-comments"></i></a>
                     <a href="https://mnsnetwork.xyz/tos" class="text-gray-400 hover:text-white transition-colors">
                         <i class="fas fa-file-alt"></i>
                     </a>
